--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p id="subTitle">The man who saved a billion lives</p>
         
         <figure id="img-div">
-            <img src="../Files/Images/tribute.jpg" alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists" id="image">
+            <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists" id="image">
             <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
         </figure>
         <section id="tribute-info">
